slider loop pause

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="topbat__sec">
         <div class="container">
            <div class="invite__section">
-             <p class="mb-0"><i class="fa fa-bank"></i> Welcome to Rathinam Gropu of Instituions</p>
+             <p class="mb-0"><i class="fa fa-bank"></i> Welcome to Rathinam Group of Instituions</p>
            </div>
            <div class="social__section">
              <ul>
@@ -32,7 +32,7 @@
           <div class="row">
             <div class="col-md-4 col-lg-4">
               <div class="logo__sec">
-                <img src="img/logo.webp" alt=""/>
+                <img src="img/web-logo.png" alt=""/>
               </div>
             </div>
             <div class="col-md-8 col-lg-8 contacts-topbar">
@@ -96,7 +96,7 @@
       <div class="mobile-container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo.webp" alt=""/></a>
+            <a class="navbar-brand" href="#"><img src="img/web-logo.png" alt=""/></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -215,6 +215,10 @@
             </div>
           </div>
           <div class="col-md-12 col-lg-12">
+            <div class="title text-center mb-4 mt-4">
+              <h3>ACHIVEMENTS</h3>
+              <div class="hr-line-center"></div>
+            </div>
             <div id="about-img" class="about-img owl-carousel">
               <!-- <img src="img/about2.jpg" alt=""/> -->
               <div class="about-carosul">
@@ -707,7 +711,7 @@
       <div class="achivement_container">
         <div class="container">
           <div class="achivement-titles">
-            <h3>ACHEIVEMENTS</h3>
+            <h3>RATHINAMITES - PLACEMENTS STATISTICS</h3>
             <p>Fusce sem dolor, interdum in efficitur at, faucibus nec lorem. Sed nec molestie justo.</p>
             <div class="hr-line mb-4" style="margin: auto"></div>
           </div>
@@ -715,126 +719,31 @@
             <div class="row pt-4">
               <div class="col-md-3 col-lg-3">
                 <div class="counter-box">
-                  <h2>60</h2>
-                  <h4>Teachers</h4>
+                  <h2>150+</h2>
+                  <h4>Recruiters Hired By Our Rathimites</h4>
                 </div>
               </div>
               <div class="col-md-3 col-lg-3">
                 <div class="counter-box">
-                  <h2>40</h2>
-                  <h4>Courses</h4>
+                  <h2>100+</h2>
+                  <h4>Companies Offering 5 Lakhs PA or Above</h4>
                 </div>
               </div>
               <div class="col-md-3 col-lg-3">
                 <div class="counter-box">
-                  <h2>900</h2>
-                  <h4>Students</h4>
+                  <h2>₹50 Lakhs</h2>
+                  <h4>Highest Salary Package Availed By Our Rathimites</h4>
                 </div>
               </div>
               <div class="col-md-3 col-lg-3">
                 <div class="counter-box">
-                  <h2>3675</h2>
-                  <h4>Statisfied Client</h4>
+                  <h2>100+</h2>
+                  <h4>Internship Availed By Our Rathimites</h4>
                 </div>
               </div>
             </div>
           </div>
         </div>  
-      </div>
-    </section>
-    <section id="campus-section">
-      <div class="container">
-        <div class="row">
-          <div class="campus-title" style="text-align: center;margin-bottom: 30px;">
-            <h3>CAMPUS TALE</h3>
-          </div>
-          <div class="col-lg-6 col-md-6">
-            <div class="campus-tour-video">
-              <div class="capmus-video-img">
-                <img src="img/campus-tour.jpg" alt="" width="100%"/>
-              </div>
-              <button type="button" class="" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/play-btn.png" alt=""/></button>
-
-              <!-- Modal -->
-              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <iframe width="100%" height="315" src="https://www.youtube.com/embed/ShRgdESVCgg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            
-            </div>
-          </div>
-          <div class="col-lg-6 col-md-6">
-            <div class="campus-tour-video">
-              <div class="capmus-video-img">
-                <img src="img/campus-tour.jpg" alt="" width="100%"/>
-              </div>
-              <button type="button" class="" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/play-btn.png" alt=""/></button>
-
-              <!-- Modal -->
-              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <iframe width="100%" height="315" src="https://www.youtube.com/embed/ShRgdESVCgg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section id="placement-section">
-      <div class="container mb-4">
-        <div class="row">
-          <div class="title text-center mb-4">
-            <h3>RATHINAMITES - PLACEMENTS STATISTICS</h3>
-          </div>
-          <div class="col-md-3 col-lg-3">
-            <div class="placement-statistics">
-              <div class="placement-statistics-title">
-                <p>150+</p>
-              </div>
-              <p>Recruiters Hired By Our Rathimites</p>
-            </div> 
-          </div>
-          <div class="col-md-3 col-lg-3">
-            <div class="placement-statistics">
-              <div class="placement-statistics-title">
-                <p>100+</p>
-              </div>
-              <p>Companies Offering 5 Lakhs PA or Above</p>
-            </div> 
-          </div>
-          <div class="col-md-3 col-lg-3">
-            <div class="placement-statistics">
-              <div class="placement-statistics-title">
-                <p>₹50 <span>Lakhs</span></p>
-              </div>
-              <p>Highest Salary Package Availed By Our Rathimites</p>
-            </div> 
-          </div>
-          <div class="col-md-3 col-lg-3">
-            <div class="placement-statistics">
-              <div class="placement-statistics-title">
-                <p>100+</p>
-              </div>
-              <p>Internship Availed By Our Rathimites</p>
-            </div> 
-          </div>
-        </div>
       </div>
     </section>
     <section id="testimonials-section">
@@ -935,7 +844,7 @@
               navigation:true,
               navigationText:["",""],
               pagination:true,
-              autoPlay:true
+              autoPlay:false
           });
       });
 
@@ -944,11 +853,11 @@
               items : 5,
               itemsDesktop:[1199,3],
               itemsDesktopSmall:[980,2],
-              itemsMobile : [600,1],
+              itemsMobile : [600,2],
               // navigation:true,
               navigationText:["",""],
               pagination:true,
-              autoPlay:true
+              autoPlay:false
           });
       });
     </script>
