--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
               <h3>ABOUT US</h3>
               <p class="mb-1">Nurturing Global Leaders through Curriculum embedded learning.</p>
               <div class="hr-line mb-4"></div>
-              <p>The Rathinam Group is a prestigious institution noted for its exceptional educational standards. It is the first organization to combine education, information technology, and infrastructure development for all under one roof. The group provides aspiring students from all over the world with various conventional and modern courses. The campus is on NH 209 in south Coimbatore and spans 70 acres. The organization, which has state-of-the-art infrastructure, selects its skilled and experienced teaching team with great care. It is where a slew of major MNC Companies recruit from a pool of well-educated, well-informed, and well-trained hands-on students. Our innovative program is a great way to stay motivated, stand out from the crowd, increase your value to future employers, and allow students to reach their maximum potential. The Rathinam Group is committed to training tomorrow's leaders and providing students with a wide range of skills that employers are increasingly seeking.</p>
+              <p>The Rathinam Group is a prestigious institution noted for its exceptional educational standards. It is the first organization to combine education, information technology, and infrastructure development for all under one roof. The group provides aspiring students from all over the world with various conventional and modern courses. The campus is on NH 209 in south Coimbatore and spans 70 acres.</p>
+              <p>The organization, which has state-of-the-art infrastructure, selects its skilled and experienced teaching team with great care. It is where a slew of major MNC Companies recruit from a pool of well-educated, well-informed, and well-trained hands-on students. Our innovative program is a great way to stay motivated, stand out from the crowd, increase your value to future employers, and allow students to reach their maximum potential. The Rathinam Group is committed to training tomorrow's leaders and providing students with a wide range of skills that employers are increasingly seeking.</p>
             </div>
           </div>
           <div class="col-md-12 col-lg-12">
@@ -507,7 +508,8 @@
           </div>
           <div class="col-md-6 col-lg-6 education-loan-desc">
             <div class="loan-desc">
-              <p>Educational Loan Assistance for Rathinam Group Students. The goal of Rathinam Group is to assist rewarding students in obtaining financial aid to stimulate their study. To motivate students to pursue higher education despite financial constraints from most banks, whether state or federal government-owned, which can offer attractive loan options to students. Talent should be given in recognition of service. Rathinam Group has created a separate loan aid unit to authorize students to look for loans from banks with which the university has ties at the time of admissions online or offline.</p>
+              <p>Educational Loan Assistance for Rathinam Group Students. The goal of Rathinam Group is to assist rewarding students in obtaining financial aid to stimulate their study. To motivate students to pursue higher education despite financial constraints from most banks, whether state or federal government-owned, which can offer attractive loan options to students.</p> 
+              <p>Talent should be given in recognition of service. Rathinam Group has created a separate loan aid unit to authorize students to look for loans from banks with which the university has ties at the time of admissions online or offline.</p>
             </div>
           </div>
         </div>
@@ -868,7 +870,7 @@
               navigation:true,
               navigationText:["",""],
               pagination:true,
-              autoPlay:true
+              autoPlay:false
           });
       });
 
@@ -881,7 +883,7 @@
               // navigation:true,
               navigationText:["",""],
               pagination:true,
-              autoPlay:true
+              autoPlay:false
           });
       });
 
