--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
            </div>
            <div class="social__section">
              <ul>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.facebook.com/rathinamcollege/about/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/rathinamgroups" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/rathinam_college/" target="_blank"><i class="fa fa-instagram"></i></a></li>
              </ul>
            </div>
         </div>
@@ -139,7 +138,7 @@
             <div class="banner_img_content">
               <h1>Education that Fuels Your Passion</h1>
               <p>At Rathinam College, we believe that education must transcend the mere acquisition of academic proficiency and instead serve as a medium for unleashing the full potential of our students.</p>
-              <button>Get Started Now</button>
+              <!-- <button>Get Started Now</button> -->
             </div>
           </div>
         </div>
@@ -282,7 +281,7 @@
                 <p>We Offer More than 70+ innovative courses.</p>
               </div>
               <div class="clg-spl-img mb-3">
-                <img src="img/entreprenur.webp" alt=""/>
+                <img src="img/PROGRAMS.png" alt=""/>
               </div>
             </div>
           </div>
@@ -832,7 +831,7 @@
               <div class="col-md-4 col-lg-4">
                 <div class="footer-icons-box">
                   <i class="fa fa-phone"></i>
-                  <h4>Phone Number</h4>
+                  <h4>Admission Hotline</h4>
                   <p>+91 84484 48909</p>
                 </div>  
               </div>
