--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
         <div class="row">
           <div class="col-md-12 col-lg-12">
             <div class="about_section">
-              <h3>ABOUT US</h3>
-              <p class="mb-1">Nurturing Global Leaders through Curriculum embedded learning.</p>
-              <div class="hr-line mb-4"></div>
-              <p>The Rathinam Group is a prestigious institution noted for its exceptional educational standards. It is the first organization to combine education, information technology, and infrastructure development for all under one roof. The group provides aspiring students from all over the world with various conventional and modern courses. The campus is on NH 209 in south Coimbatore and spans 70 acres.</p>
+              <h3 class="text-center">ABOUT US</h3>
+              <p class="mb-1 text-center">Nurturing Global Leaders through Curriculum embedded learning.</p>
+              <div class="hr-line mb-4" style="margin: auto"></div>
+              <p><span>T</span>he Rathinam Group is a prestigious institution noted for its exceptional educational standards. It is the first organization to combine education, information technology, and infrastructure development for all under one roof. The group provides aspiring students from all over the world with various conventional and modern courses. The campus is on NH 209 in south Coimbatore and spans 70 acres.</p>
               <p>The organization, which has state-of-the-art infrastructure, selects its skilled and experienced teaching team with great care. It is where a slew of major MNC Companies recruit from a pool of well-educated, well-informed, and well-trained hands-on students. Our innovative program is a great way to stay motivated, stand out from the crowd, increase your value to future employers, and allow students to reach their maximum potential. The Rathinam Group is committed to training tomorrow's leaders and providing students with a wide range of skills that employers are increasingly seeking.</p>
             </div>
           </div>
