--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             </div>
           </div>
           <div class="col-md-6 col-lg-6 education-loan-desc">
-            <div class="loan-desc">
+            <div class="loan-desc" style="text-align: justify;">
               <p>Educational Loan Assistance for Rathinam Group Students. The goal of Rathinam Group is to assist rewarding students in obtaining financial aid to stimulate their study. To motivate students to pursue higher education despite financial constraints from most banks, whether state or federal government-owned, which can offer attractive loan options to students.</p> 
               <p>Talent should be given in recognition of service. Rathinam Group has created a separate loan aid unit to authorize students to look for loans from banks with which the university has ties at the time of admissions online or offline.</p>
             </div>
@@ -614,7 +614,7 @@
             <h3>RATHINAM HOSTELS - NEXT HOME FOR STUDENTS</h3>
             <div class="hr-line-center"></div>
           </div>
-          <div class="hostel-desc mb-4">
+          <div class="hostel-desc mb-4" style="text-align: justify;">
             <p>Rathinam Group recognizes that a well-experienced professional hostel operator controls Rathinam Hostels. It is known for its management proficiency in Co-living spaces across South India. There are spacious separate hostels for boys and girls, which can be settled by more than 1500 students inside the campus.</p>
             <p>Rathinam Hostels provide Top Class infrastructure facilities and secure student stay. It also provides a “Mobile App” through which a student can give her feedback by addressing all their grievances to maintain their leave of absence. Biometrics is also installed to monitor and limit unwanted movement of the students.</p>
             <p>Some of the highlighted features are listed below as follows.</p>
@@ -832,7 +832,7 @@
                 <div class="footer-icons-box">
                   <i class="fa fa-phone"></i>
                   <h4>Admission Hotline</h4>
-                  <p>+91 84484 48909</p>
+                  <p>+91 844 844 8909</p>
                 </div>  
               </div>
               <div class="col-md-4 col-lg-4">
