--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           <div class="col-md-4 col-lg-4">
             <div class="documents-list">
               <div class="documents-title">
-                <h5>From Applicant Side</h5>
+                <h5>From Parents/ Guarantor Side</h5>
               </div>
               <div class="document-list-ul">
                 <ul>
