--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
     <section id="education-loan-section">
       <div class="container">
         <div class="row mt-4">
-          <div class="title text-center mb-4">
+          <div class="title text-center mb-4 mt-4">
             <h3>EDUCATIONAL LOAN</h3>
             <div class="hr-line-center"></div>
           </div>
