--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="feature-content">
                   <h4>TOP NOTCH <br/>FACULTY</h4>
-                  <p>Erudite scholars with advanced academic degrees and a wealth of expertise in fields of specialization.</p>
+                  <p>Erudite dedicated scholars with advanced academic degrees and a wealth of expertise in the fields of technical specialization.</p>
                 </div>
               </div>
             </div>
