Gallry final update

--- a/index.html
+++ b/index.html
@@ -819,45 +819,55 @@
         
                 <div class="row">
         
-                    <div class="col-sm-12 col-md-4">
-                        <a class="lightbox" href="img/campus/6.jpg">
+                    <div class="col-sm-12 col-md-3">
+                        <a class="lightbox" href="img/campus/1.jpg">
                             <img src="img/campus/1.jpg" alt="Bridge">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/campus/7.jpg">
+                    <div class="col-sm-6 col-md-3">
+                        <a class="lightbox" href="img/campus/11.jpg">
                             <img src="img/campus/11.jpg" alt="Park">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-3">
                         <a class="lightbox" href="img/campus/8.jpg">
                             <img src="img/campus/8.jpg" alt="Tunnel">
                         </a>
                     </div>
+                    <div class="col-sm-6 col-md-3">
+                      <a class="lightbox" href="img/campus/13.jpg">
+                          <img src="img/campus/13.jpg" alt="Tunnel">
+                      </a>
+                  </div>
                     <div class="col-sm-12 col-md-8">
                         <a class="lightbox" href="img/campus/3.jpg">
                             <img src="img/campus/3.jpg" alt="Traffic">
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/campus/2.jpg">
+                        <a class="lightbox" href="img/campus/10.jpg">
                             <img src="img/campus/10.jpg" alt="Coast">
                         </a>
                         <a class="lightbox" href="img/campus/4.jpg">
                           <img src="img/campus/4.jpg" alt="Rails">
                       </a>
-                    </div> 
-                    <div class="col-sm-12 col-md-4">
-                      <a class="lightbox" href="img/campus/1.jpg">
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                      <a class="lightbox" href="img/campus/14.jpg">
+                          <img src="img/campus/14.jpg" alt="Tunnel">
+                      </a>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                      <a class="lightbox" href="img/campus/12.jpg">
                           <img src="img/campus/12.jpg" alt="Bridge">
                       </a>
                     </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/campus/5.jpg">
+                    <div class="col-sm-6 col-md-3">
+                        <a class="lightbox" href="img/campus/2.jpg">
                             <img src="img/campus/2.jpg" alt="Park">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-4">
+                    <div class="col-sm-6 col-md-3">
                         <a class="lightbox" href="img/campus/9.jpg">
                             <img src="img/campus/9.jpg" alt="Tunnel">
                         </a>
