--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
               <li><a href="#apply-section">How to Apply</a></li>
               <li><a href="#scholarship-section">Scholarship</a></li>
               <li><a href="#education-loan-section">Educational Loan</a></li>
+              <li><a href="#campus_life">Campus Life</a></li>
               <li><a href="#hostel-facilities-section">Hostel Facilities</a></li>
               <li><a href="#achivement-section">Placements</a></li>
             </ul>
@@ -119,6 +120,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#education-loan-section">Educational Loan</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#campus_life">Campus Life</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#hostel-facilities-section">Hostel Facilities</a>
@@ -754,59 +758,6 @@
         </div>
       </div>  
     </section>
-    <section id="testimonials-section">
-      <div class="testimonial_container">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12 col-md-12" style="margin-bottom: 60px;">
-              <div class="people_says" style="text-align: center;">
-                <h3>WORDS FROM RATHINAMITES</h3>
-                <p>Testimonials of transformation to the apex</p>
-                <div class="hr-line mb-4" style="margin: auto"></div>
-                <p>Listen to our distinguished alums recounting how Rathinam Group helped them transform their dreams into successful careers with unparalleled academic and career development opportunities.</p>
-              </div>
-            </div>
-            <div class="col-lg-12 col-md-12">
-              <div class="row">
-                <div class="col-lg-4 col-md-4">
-                  <div class="testimonial-item">
-                    <div class="testi-img">
-                      <img src="img/joy.webp" alt=""/>
-                    </div>
-                    <div class="testi-desc">
-                      <h4 class="testi-name">Joy Mary</h4>
-                      <p>Rathinam provides more opportunities to groom ourselves, and it helps significantly to improve our skills.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                  <div class="testimonial-item">
-                    <div class="testi-img">
-                      <img src="img/ajay.webp" alt=""/>
-                    </div>
-                    <div class="testi-desc">
-                      <h4 class="testi-name">Ajay</h4>
-                      <p>Rathinam helps students to achieve their goals. They stimulate students to achieve their dreams come true.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                  <div class="testimonial-item">
-                    <div class="testi-img">
-                      <img src="img/vindhiya.webp" alt=""/>
-                    </div>
-                    <div class="testi-desc">
-                      <h4 class="testi-name">Vindhiya</h4>
-                      <p>Our college builds community through interactions that demonstrate a passion for learning & respect for diversity.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <section id="campus_life">
       <div class="container">
         <div class="row">
@@ -877,6 +828,59 @@
             </div>
         
         </div>
+        </div>
+      </div>
+    </section>
+    <section id="testimonials-section">
+      <div class="testimonial_container">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 col-md-12" style="margin-bottom: 60px;">
+              <div class="people_says" style="text-align: center;">
+                <h3>WORDS FROM RATHINAMITES</h3>
+                <p>Testimonials of transformation to the apex</p>
+                <div class="hr-line mb-4" style="margin: auto"></div>
+                <p>Listen to our distinguished alums recounting how Rathinam Group helped them transform their dreams into successful careers with unparalleled academic and career development opportunities.</p>
+              </div>
+            </div>
+            <div class="col-lg-12 col-md-12">
+              <div class="row">
+                <div class="col-lg-4 col-md-4">
+                  <div class="testimonial-item">
+                    <div class="testi-img">
+                      <img src="img/joy.webp" alt=""/>
+                    </div>
+                    <div class="testi-desc">
+                      <h4 class="testi-name">Joy Mary</h4>
+                      <p>Rathinam provides more opportunities to groom ourselves, and it helps significantly to improve our skills.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                  <div class="testimonial-item">
+                    <div class="testi-img">
+                      <img src="img/ajay.webp" alt=""/>
+                    </div>
+                    <div class="testi-desc">
+                      <h4 class="testi-name">Ajay</h4>
+                      <p>Rathinam helps students to achieve their goals. They stimulate students to achieve their dreams come true.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4">
+                  <div class="testimonial-item">
+                    <div class="testi-img">
+                      <img src="img/vindhiya.webp" alt=""/>
+                    </div>
+                    <div class="testi-desc">
+                      <h4 class="testi-name">Vindhiya</h4>
+                      <p>Our college builds community through interactions that demonstrate a passion for learning & respect for diversity.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
