--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
           </div>
           <div class="col-md-6 col-lg-6">
             <div class="loan-img">
-              <img src="img/loan.webp" alt=""/>
+              <img src="img/loan.jpg" alt=""/>
             </div>
           </div>
           <div class="col-md-6 col-lg-6 education-loan-desc">
