--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               
               <div class="about-carosul">
                 <div class="about-carosul-img">
-                  <img src="img/awards-2-min.png" alt=""/>
+                  <img src="img/awards-2-min.jpg" alt=""/>
                 </div>
               </div>
 
@@ -259,6 +259,12 @@
               <div class="about-carosul">
                 <div class="about-carosul-img">
                   <img src="img/awards-6-min.png" alt=""/>
+                </div>
+              </div>
+
+              <div class="about-carosul">
+                <div class="about-carosul-img">
+                  <img src="img/award-7-min.jpg" alt=""/>
                 </div>
               </div>
 
@@ -943,7 +949,7 @@
               navigation:true,
               navigationText:["",""],
               pagination:true,
-              autoPlay:false
+              autoPlay:true
           });
       });
 
@@ -956,7 +962,7 @@
               // navigation:true,
               navigationText:["",""],
               pagination:true,
-              autoPlay:false
+              autoPlay:true
           });
       });
 
