--- a/index.html
+++ b/index.html
@@ -369,11 +369,22 @@
           <h3>HOW TO APPLY</h3>
           <div class="hr-line-center"></div>
         </div>
-        <div class="apply-row">
-          <img src="img/apply-img.png" alt=""/>        
-        </div>
-        <div class="mobile-apply-now">
-          <img src="img/mobile-apply-img.png" alt=""/>
+        <div class="row">
+          <div class="col-md-10 col-lg-10">
+            <div class="apply-row">
+              <img src="img/apply-img.png" alt=""/>        
+            </div>
+            <div class="mobile-apply-now">
+              <img src="img/mobile-apply-img.png" alt=""/>
+            </div>
+          </div>
+          <div class="col-md-2 col-lg-2 assistance">
+            <div class="more-assistance">
+              <img src="img/operator.png" alt=""/>
+              <h5>For More Assistance</h5>
+              <a href="tel:918448448909"><p>+91 844 844 8909</p></a>
+            </div> 
+          </div>
         </div>
       </div>
     </section>
