--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
           <div class="col-md-4 col-lg-4">
             <div class="clg-spl-features">
               <div class="clg-spl-img mb-3">
-                <img src="img/Aboard.webp" alt=""/>
+                <img src="img/coe.jpeg" alt=""/>
               </div>
               <div class="clg-spl-desc mb-3">
-                <h5>ABROAD STUDENTS</h5>
+                <h5>CENTER OF EXCELLENCE</h5>
                 <p><strong>300+</strong> International Students from <strong>20+</strong> States and </strong>30+</strong> countries.</p>
               </div>
             </div>
@@ -288,21 +288,21 @@
           <div class="col-md-4 col-lg-4">
             <div class="clg-spl-features">
               <div class="clg-spl-desc mb-3">
-                <h5>PROGRAMS</h5>
+                <h5>ATAL INCUBATION CENTER</h5>
                 <p>We Offer More than 70+ innovative courses.</p>
               </div>
               <div class="clg-spl-img mb-3">
-                <img src="img/PROGRAMS.png" alt=""/>
+                <img src="img/AIC.jpg" alt=""/>
               </div>
             </div>
           </div>
           <div class="col-md-4 col-lg-4">
             <div class="clg-spl-features">
               <div class="clg-spl-img mb-3">
-                <img src="img/IIC.webp" alt=""/>
+                <img src="img/IT-park.png" alt=""/>
               </div>
               <div class="clg-spl-desc mb-3">
-                <h5>IIC RANKING</h5>
+                <h5>SEZ & IT Park</h5>
                 <p>RCAS & RTC Proudly marched ahead with 5 Star IIC Ranking in 2020.</p>
               </div>
             </div>
@@ -310,10 +310,10 @@
           <div class="col-md-4 col-lg-4">
             <div class="clg-spl-features">
               <div class="clg-spl-img mb-3">
-                <img src="img/facility.webp" alt=""/>
+                <img src="img/Aboard.webp" alt=""/>
               </div>
               <div class="clg-spl-desc mb-3">
-                <h5>FACILITIES</h5>
+                <h5>STUDY IN INDIA</h5>
                 <p>Our Campus is Well connected with the city.</p>
               </div>
             </div>
@@ -321,11 +321,11 @@
           <div class="col-md-4 col-lg-4">
             <div class="clg-spl-features">
               <div class="clg-spl-desc mb-3">
-                <h5>ENTREPRENEURSHIP</h5>
+                <h5>CURRICULUM</h5>
                 <p>We Promote Innovation and Entrepreneurship development through formal and non-formal programs.</p>
               </div>
               <div class="clg-spl-img mb-3">
-                <img src="img/program.webp" alt=""/>
+                <img src="img/curriculum.jpeg" alt=""/>
               </div>
             </div>
           </div>
@@ -335,7 +335,7 @@
                 <img src="img/entreprenur.webp" alt=""/>
               </div>
               <div class="clg-spl-desc mb-3">
-                <h5>ARIIA RANKING</h5>
+                <h5>HIGHLIGHTS</h5>
                 <p>RTC & RCAS Ranked Excellent in ARIIA Ranking 2021.</p>
               </div>
             </div>
@@ -348,7 +348,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-4 course__slider">
              <div class="popular__couses">
-                <h3>POPULAR COURSES</h3>
+                <h3>EMERGING COURSES</h3>
                 <p class="mb-1">Achieve the apex with our acclaimed courses</p>
                 <div class="hr-line mb-4"></div>
                 <p>Experience the pinnacle of academic excellence with our acclaimed courses, designed to ignite your intellectual curiosity and professional growth.</p>
