--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           </div>
           <div class="col-md-12 col-lg-12">
             <div class="title text-center mb-4 mt-4">
-              <h3>ACHIEVEMENTS</h3>
+              <h3>RANKING AND ACCREDITATIONS</h3>
               <div class="hr-line-center"></div>
             </div>
             <div id="about-img" class="about-img owl-carousel mb-4">
@@ -341,6 +341,21 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <dv class="row">
+          <div class="col-lg-3 col-md-3">
+            <div class="title text-center mb-4 mt-4">
+              <h3>OTHER HIGHLIGHTS</h3>
+              <div class="hr-line-center"></div>
+            </div>
+          </div>
+          <div class="col-lg-9 col-md-9">
+            
+          </div>
+        </dv>
       </div>
     </section>
     <section id="course-section">
@@ -517,7 +532,7 @@
           </div>
           <div class="col-md-6 col-lg-6">
             <div class="loan-img">
-              <img src="img/loan.jpg" alt=""/>
+              <img src="img/loan." alt=""/>
             </div>
           </div>
           <div class="col-md-6 col-lg-6 education-loan-desc">
@@ -585,7 +600,7 @@
     </section>
     <section id="achivement-section">
       <div class="achivement_container">
-        <div class="container">
+        <div class="container-fluid">
           <div class="achivement-titles">
             <h3>RATHINAMITES - PLACEMENTS STATISTICS</h3>
             <p>Explore limitless possibilities: Look where our talented alumni have soared!</p>
@@ -593,28 +608,40 @@
           </div>
           <div class="achivement_counters">
             <div class="row pt-4">
-              <div class="col-md-3 col-lg-3">
+              <div class="col-md-2 col-lg-2">
                 <div class="counter-box">
                   <h2>150+</h2>
-                  <p>Recruiters Hired By Our Rathimites</p>
+                  <p>Number of <br/>Companies</p>
                 </div>
               </div>
-              <div class="col-md-3 col-lg-3">
+              <div class="col-md-2 col-lg-2">
+                <div class="counter-box">
+                  <h2>745+</h2>
+                  <p>Number of <br/>Students Placed</p>
+                </div>
+              </div>
+              <div class="col-md-2 col-lg-2">
+                <div class="counter-box">
+                  <h2>93.12%</h2>
+                  <p>Percentage of <br/>Students Placed</p>
+                </div>
+              </div>
+              <div class="col-md-2 col-lg-2">
+                <div class="counter-box">
+                  <h2>₹10</h2>
+                  <p>Lakhs Highest <br/>Salary</p>
+                </div>
+              </div>
+              <div class="col-md-2 col-lg-2">
+                <div class="counter-box">
+                  <h2>₹3.25</h2>
+                  <p>Lakhs Average <br/>Salary</p>
+                </div>
+              </div>
+              <div class="col-md-2 col-lg-2">
                 <div class="counter-box">
                   <h2>100+</h2>
-                  <p>Companies Offering 5 Lakhs PA or Above</p>
-                </div>
-              </div>
-              <div class="col-md-3 col-lg-3">
-                <div class="counter-box">
-                  <h2>₹50 <span>Lakhs</span></h2>
-                  <p>Highest Salary Package Availed By Our Rathimites</p>
-                </div>
-              </div>
-              <div class="col-md-3 col-lg-3">
-                <div class="counter-box">
-                  <h2>100+</h2>
-                  <p>Internship Availed By Our Rathimites</p>
+                  <p>Internship with <br/>Stipend</p>
                 </div>
               </div>
             </div>
