--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             </div>
           </div>
           <div class="col-lg-9 col-md-9">
-            
+
           </div>
         </dv>
       </div>
@@ -532,7 +532,7 @@
           </div>
           <div class="col-md-6 col-lg-6">
             <div class="loan-img">
-              <img src="img/loan." alt=""/>
+              <img src="img/loan.webp" alt=""/>
             </div>
           </div>
           <div class="col-md-6 col-lg-6 education-loan-desc">
