--- a/index.html
+++ b/index.html
@@ -268,6 +268,12 @@
                 </div>
               </div>
 
+              <div class="about-carosul">
+                <div class="about-carosul-img">
+                  <img src="img/NPTEL.png" alt=""/>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
@@ -343,7 +349,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <!-- <section>
       <div class="container">
         <dv class="row">
           <div class="col-lg-3 col-md-3">
@@ -357,7 +363,7 @@
           </div>
         </dv>
       </div>
-    </section>
+    </section> -->
     <section id="course-section">
       <div class="container">
         <div class="row">
