--- a/index.html
+++ b/index.html
@@ -274,6 +274,12 @@
                 </div>
               </div>
 
+              <div class="about-carosul">
+                <div class="about-carosul-img">
+                  <img src="img/NBA.jpg" alt=""/>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
@@ -335,35 +341,22 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 col-lg-4">
-            <div class="clg-spl-features">
-              <div class="clg-spl-img mb-3">
-                <img src="img/entreprenur.webp" alt=""/>
-              </div>
-              <div class="clg-spl-desc mb-3">
-                <h5>HIGHLIGHTS</h5>
-                <p>RTC & RCAS Ranked Excellent in ARIIA Ranking 2021.</p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
-    <!-- <section>
+    <section>
       <div class="container">
-        <dv class="row">
-          <div class="col-lg-3 col-md-3">
+        <div class="row">
             <div class="title text-center mb-4 mt-4">
               <h3>OTHER HIGHLIGHTS</h3>
               <div class="hr-line-center"></div>
             </div>
-          </div>
-          <div class="col-lg-9 col-md-9">
-
-          </div>
-        </dv>
+            <div class="highlights-img text-center">
+               <img src="img/highlights.png" alt=""/>
+            </div>
+        </div>
       </div>
-    </section> -->
+    </section>
     <section id="course-section">
       <div class="container">
         <div class="row">
